<resources>
    <string name="app_name">MeasureIt</string>
    <string name="Welcome">Welcome</string>
    <string name="Selection">Select a Function to Start:</string>
    <string name="Configuration">Configuration</string>
    <string name="Scanner">Scanner</string>
    <string name="Result">Result</string>
    <string name="Record">Record</string>
    <string name="Confirm">Confirm</string>
    <string name="SelectBluetoothDevice">Tap to Connect or Add Bluetooth Device:</string>
    <string name="SelectConfiguration">Tap to Select or Configure Measuring Parameters:</string>
    <string name="AddNewAlert">Enter Name for New Configuration</string>
    <string name="AlertHint">Enter a Name</string>
    <string name="Unavailable">Unavailable</string>
    <string name="Unavailable_Random">Unavailable in Random Mode</string>
    <string name="TypeSelectionHint">Tap to Select a Head Type:</string>
    <string name="Parameter_Nonstandard">Nonstandard Head</string>
    <string name="Parameter_HintE1">Concave Deviation(mm)</string>
    <string name="Parameter_HintE2">Convex Deviation(mm)</string>
    <string name="Parameter_InsideRadius">Enter Head Radius Inside(mm)</string>
    <string name="Parameter_SurfaceHeight">Enter Curved Surface Height(mm)</string>
    <string name="Parameter_TotalHeight">Enter Head Total Height(mm)</string>
    <string name="EssentialParameters">Below parameters are Necessary:</string>
    <string name="EllipticityDetection">Enable Ellipticity Detection</string>
    <string name="PadHeight">Enter the Pad Height(mm)</string>
    <string name="RandomData">Enable Random Measuring Data</string>
    <string name="SaveConfiguration">Save this Configuration</string>
    <string name="AutoSaveRemind">*Configuration saves automatically.</string>
    <string name="VersionInfo">Version 2.0.0 Beta1</string>
    <string name="WaitingStart">Real-Time Result will Show Here</string>
    <string name="ProgressBeforeStart">Real-Time Progress will Show Here</string>
    <string name="NavigationName_Overview">Overview</string>
    <string name="NavigationName_Data">Data</string>
    <string name="NavigationName_Bias">Bias</string>
    <string name="NavigationName_Publish">Publish</string>
    <string name="Settings">Settings</string>
    <string name="BluetoothStatue">Bluetooth Statue:</string>
    <string name="Receive">Receive Range:</string>
    <string name="pointNumberSeekBar">Number of points used for calculation:</string>
    <string name="angleNumberSeekBar">Total points, more points means less interval:</string>
    <string name="setting_highperformance">High Performance Mode</string>
    <string name="setting_highprecision">High Precision Mode</string>
    <string name="Pop_View">VIEW</string>
    <string name="Pop_Info">INFO</string>
    <string name="Pop_Del">DELETE</string>
    <string name="Pop_Export">EXPORT</string>
    <string name="Pop_Cancel">Cancel</string>
    <string name="Pop_Confirm">Confirm</string>
    <string name="FilterPop_Non">NO FILTER</string>
    <string name="FilterPop_Median">MEDIAN FILTER</string>
    <string name="PrefixPop_Move">Set Move Step Size…</string>
    <string name="PrefixPop_Rotate">Set Rotate Angle Size…</string>
    <string name="PrefixPop_RotateCenter">Set Rotate Center Coordinate…</string>
    <string name="PrefixPop_Scale">Set Scale Step Size…</string>
    <string name="PrefixProgress_Title">Slide to Change the Parameter</string>
    <string name="EnterRotateCenter">Enter Rotate Center Coordinate</string>
    <string name="EnterRotateCenterHint">*Leave empty blanks will remain their original value</string>
    <string name="OriginalDotsOnly">Original Data Dots</string>
    <string name="FilteredDotsOnly">Filtered Data Dots</string>
    <string name="FittingLineOnly">Fitting Data Line</string>
    <string name="StandardLineOnly">Standard Data Line</string>
    <string name="xposition">Axis X Position</string>
    <string name="yposition">Axis Y Position</string>
    <string name="verticalgrid">Vertical Grid Line</string>
    <string name="horizontalgrid">Horizontal Grid Line</string>
    <string name="dotShape">Chart Dot Shape</string>
    <string name="dotSize">Chart Dot Size</string>
    <string name="dotLines">Chart Lines Between Dots</string>
    <string name="lineSize">Chart Line Size</string>
    <string name="chartFilled">Chart Filled Below Lines</string>
    <string name="originalDotsColor">Original Dots Color</string>
    <string name="filteredDotsColor">Filtered Dots Color</string>
    <string name="standardDotsColor">Standard Line Color</string>
    <string name="fittingDotsColor">Fitting Line Color</string>
    <string name="more"><u>see details…</u></string>
    <string name="fitting_lsm">Least Squares Method</string>
    <string name="export_title">Export Data As…</string>
    <string name="xsl_name">Specify a Name for the File</string>
    <string name="xsl_success">Exported Successfully!</string>
    <string name="success_preview">Open Preview in Current App</string>
    <string name="success_view">Open in Another App</string>
    <string name="success_share_system">Share File via System Apps</string>
    <string name="preview">Preview</string>


</resources>
