<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Pop_View"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/record_pop_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:typeface="monospace"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/Pop_View" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Pop_Info"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/record_pop_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:typeface="monospace"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/Pop_Info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Pop_Export"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/record_pop_export" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:typeface="monospace"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/Pop_Export" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Pop_Delete"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/record_pop_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:typeface="monospace"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/Pop_Del" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/grayline" />

    <Button
        android:id="@+id/Pop_Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:typeface="monospace"
        android:text="@string/Pop_Cancel"/>

</LinearLayout>
