<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/recordNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Record"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:typeface="serif"/>

        <TextView
            android:id="@+id/recordMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/Settings"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            android:typeface="serif" />

    </LinearLayout>

    <TextView
        android:id="@+id/createdTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:typeface="sans"
        android:textStyle="normal"
        android:textColor="@color/colorBlack"
        android:text="@string/pointNumberSeekBar"/>

    </LinearLayout>

        <ImageView
            android:id="@+id/recordMenu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:background="@drawable/record_menu"
            android:contentDescription="@string/Record"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/grayline" />

</LinearLayout>
