<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/result_data_dialog_selection_original"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/OriginalDotsOnly"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <CheckBox
            android:id="@+id/result_data_dialog_selection_originalCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/result_data_dialog_selection_filtered"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/FilteredDotsOnly"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <CheckBox
            android:id="@+id/result_data_dialog_selection_filteredCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/result_data_dialog_selection_standard"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/StandardLineOnly"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <CheckBox
            android:id="@+id/result_data_dialog_selection_standardCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/result_data_dialog_selection_fitting"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/FittingLineOnly"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <CheckBox
            android:id="@+id/result_data_dialog_selection_fittingCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <Button
        android:id="@+id/result_data_dialog_selection_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textSize="16sp"
        android:typeface="monospace"
        android:text="@string/Confirm"
        android:textColor="@color/colorBlack"/>


</LinearLayout>
