<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_gravity="center"
            android:text="@string/verticalgrid"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <Switch
            android:id="@+id/result_data_dialog_gridmode_verticalswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_gravity="center"
            android:text="@string/horizontalgrid"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"/>

        <Switch
            android:id="@+id/result_data_dialog_gridmode_horizontalswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@drawable/grayline" />

    <Button
        android:id="@+id/result_data_dialog_gridmode_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textSize="16sp"
        android:typeface="monospace"
        android:text="@string/Pop_Cancel"
        android:textColor="@color/colorBlack"/>


</LinearLayout>
